--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,49 @@ body{
 #inicio{
     background-color: #1F2937;
     color: #fff;
+    padding: 200px;
+
+}
+
+#header-logo{
+    text-decoration: none;
+    font-size: 24px;
+    color: #F9FaF8;
+    font-weight: 600;
+    margin: 10px 0;
+    flex: 1;
+}
+nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #1F2937;
+    display: flex;
+    padding: 0 200px;
+}
+
+ul{
+    list-style-type: none;
+    overflow: hidden;
+    text-align: right;
+}
+
+li{
+    display: inline-block;
+}
+
+li a{
+    text-decoration: none;
+    margin: 5px;
+    display: block;
+    text-align: right;
+
+}
+
+.header-link{
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 #frase{
