--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body{
     font-size: 24px;
     color: #F9FaF8;
     font-weight: 700;
-    margin: 10px 0;
+    margin: 15px 0;
     flex: 1;
 }
 nav{
@@ -41,7 +41,7 @@ li{
 
 li a{
     text-decoration: none;
-    margin: 5px;
+    margin: 0 5px;
     display: block;
     text-align: right;
 
@@ -157,9 +157,45 @@ li a{
     margin: 0;
 }
 
+/*Seccion del cartel azul de registrarse*/
+
+#catelito-sec{
+    padding: 12vh 35vh;
+}
+
 #cartelito{
     background-color: #3882F6;
+    border-radius: 10px;
+    padding: 50px 60px 50px 100px;
     color: #fff;
+    display: flex;
+}
+
+.texto-sign{
+    flex: 2;
+}
+
+.texto-sign h3{
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.texto-sign p{
+    margin: 0;
+    padding: 0;
+}
+
+#span-btn{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#btn-cartel{
+    border: #fff 2px solid;
+
 }
 
 #footer{
